<resources>
    <string name="app_name">xtvtco</string>
    <string name="email_format_is_invalid">Email format is invalid.</string>
    <string name="reset_password_message">An email will be send to reset your password.</string>
    <string name="username_exists">Username already exists.</string>
    <string name="email_exists">Email already exists.</string>
    <string name="minimum_length_3">Minimum length must be at least 3.</string>
    <string name="minimum_length_6">Minimum length must be at least 6.</string>
    <string name="alphabetical_numerical">Value must be alphabetical and numerical only.</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>

    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_email">Send Email</string>
    <string name="resetpassword">Reset Password</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>

    <string name="profile">Profile</string>
    <string name="activities">Activities</string>
    <string name="people">People</string>
    <string name="posts">Posts</string>
    <string name="media">Media</string>
    <string name="groups">Groups</string>

    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create An Account</string>

    <string name="press_back_again_to_exit">Press back again to exit.</string>

    <string name="activity">Activity</string>
    <string name="post">Post</string>

</resources>
